# url_handler

./: README.md
url_handler/: Cargo.toml
url_handler/src/: external_fascade.rs  format_handler.rs  lib.rs  protocol_handler.rs  tests.rs  traits.rs
url_handler/src/external_fascade/: openssh.rs
url_handler/src/protocol_handler/: file.rs  http.rs  registry.rs  scp.rs
url_handler/src/tests/: file.rs  formats.rs  url_handler.rs
